--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.vip.data.vdpe.gear</groupId>
+    <groupId>com.data.vdpe.gear</groupId>
     <artifactId>gear</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -214,7 +214,7 @@
 
             <!--gear-->
             <dependency>
-                <groupId>com.vip.data.vdpe.gear</groupId>
+                <groupId>com.data.vdpe.gear</groupId>
                 <artifactId>core</artifactId>
                 <version>${gear.version}</version>
             </dependency>
