--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>core</module>
         <module>daemon</module>
+        <module>examples</module>
     </modules>
 
     <properties>
@@ -30,6 +31,8 @@
         <netty.version>3.2.10.Final</netty.version>
         <slf4j.version>1.7.7</slf4j.version>
         <common.lang.version>2.6</common.lang.version>
+        <commons.io.version>2.5</commons.io.version>
+
 
         <!--gearpump deamon-->
         <intel.codahale.version>3.0.2</intel.codahale.version>
@@ -175,6 +178,7 @@
                         <checkMultipleScalaVersions>true</checkMultipleScalaVersions>
                         <scalaVersion>${scala.version}</scalaVersion>
                         <includes>
+                            <!--runtime&compile jar in local-->
                             <include>lib/*.jar</include>
                         </includes>
                     </configuration>
@@ -220,7 +224,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.vip.data.vdpe</groupId>
+                <groupId>com.data.vdpe.gear</groupId>
                 <artifactId>daemon</artifactId>
                 <version>${gear.version}</version>
             </dependency>
@@ -277,6 +281,13 @@
                 <artifactId>commons-logging</artifactId>
                 <version>1.1.3</version>
             </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
+            </dependency>
+
 
             <!--hadoop-->
             <dependency>
